@@ -4,6 +4,9 @@ Changelog
 3.0 - Unreleased
 ----------------
 
+- Adjusted test setup for Plone 5.
+  [hannosch]
+
 - Added the `replace_local_role_manager` method formerly found in CMFPlone.
   [hannosch]
 
